--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -10,11 +10,11 @@
     <h2>메인 화면</h2>
 </div>
 
-<div th:each="boardname : ${boardList}">
+<div th:each="boardName : ${boardList}">
 <!--  <h2 th:text="${board.name}"></h2>-->
   <ul>
     <li>
-      <a th:href="@{'/board/' + ${boardname}}" th:text="${boardname}">게시판 이름</a>
+      <a th:href="@{/board/{boardName}(boardName=${boardName})}" th:text="${boardName}">게시판 이름</a>
     </li>
   </ul>
 </div>
