글쓰기 기능 구현

--- a/src/main/resources/templates/writepost.html
+++ b/src/main/resources/templates/writepost.html
@@ -32,7 +32,7 @@
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='boardmainpage.html'"
-                        th:onclick="|location.href='@{/board}'|"
+                        th:onclick="|location.href='@{/board/{boardName}(boardName=${boardName})}'|"
                         type="button">취소
                 </button>
             </div>
