--- a/src/main/resources/templates/boardmainpage.html
+++ b/src/main/resources/templates/boardmainpage.html
@@ -50,8 +50,8 @@
     <div class="row justify-content-end">
         <div class="col-auto">
             <button class="btn btn-primary"
-                    onclick="location.href='writeboard.html'"
-                    th:onclick="|location.href='@{/board/write}'|"
+                    onclick="location.href='writepost.html'"
+                    th:onclick="|location.href='@{/board/{boardName}/write(boardName=${boardName})}'|"
             >
                 글쓰기
             </button>
