--- a/src/main/resources/templates/boardmainpage.html
+++ b/src/main/resources/templates/boardmainpage.html
@@ -19,6 +19,17 @@
         <h2>게시글</h2>
     </div>
 
+    <div class="row justify-content-end">
+        <div class="col-auto">
+            <button class="btn btn-primary"
+                    onclick="location.href='loginpage.html'"
+                    th:onclick="|location.href='@{/login}'|"
+            >
+                로그인
+            </button>
+        </div>
+    </div>
+
     <div>
         <table class="table">
             <thead>
