댓글 기능 구현

--- a/src/main/resources/templates/boardmainpage.html
+++ b/src/main/resources/templates/boardmainpage.html
@@ -44,22 +44,28 @@
             <tr>
                 <th>번호</th>
                 <th>제목</th>
+                <th>글쓴이</th>
                 <th>날짜</th>
                 <th>조회수</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="post : ${posts}">
-                <td><a href="viewpost.html"
+                <td>
+                    <a href="viewpost.html"
                        th:href="@{/board/{boardName}/{postId}(postId=${post.id},boardName=${boardName})}"
-                       th:text="${post.id}">1</a>
+                       th:text="${post.id}">1
+                    </a>
                 </td>
-                <td><a href="viewpost.html"
+                <td>
+                    <a href="viewpost.html"
                        th:href="@{/board/{boardName}/{postId}(postId=${post.id},boardName=${boardName})}"
-                       th:text="${post.title}">제목</a>
+                       th:text="${post.title}">제목
+                    </a>
                 </td>
+                <td th:text="${post.nickname}">글쓴이</td>
                 <p th:if="${post.date.isAfter(yesterdayTime)}">
-                    <td th:text="${#temporals.format(post.date, 'HH:mm')}"></td>
+                    <td th:text="${#temporals.format(post.date, 'HH:mm')}">10:50</td>
                 </p>
                 <p th:unless="${post.date.isAfter(yesterdayTime)}">
                     <td th:text="${#temporals.format(post.date, 'MM-dd')}"></td>
@@ -71,7 +77,7 @@
     </div>
 
     <div class="row justify-content-end">
-        <div class="col-auto">
+        <div class="col-auto" th:if="${isLogined == true}">
             <button class="btn btn-primary"
                     onclick="location.href='writepost.html'"
                     th:onclick="|location.href='@{/board/{boardName}/write(boardName=${boardName})}'|"
@@ -88,9 +94,9 @@
             <div class="col-md-2">
                 <select id="searchType" name="searchType"
                         th:field="${postSearchDto.searchType}" class="form-control">
-                    <option th:value="${T(com.example.board.domain.SearchType).TITLE}">제목</option>
-                    <option th:value="${T(com.example.board.domain.SearchType).CONTENT}">내용</option>
-                    <option th:value="${T(com.example.board.domain.SearchType).ALL}">제목+내용</option>
+                    <option th:value="${T(com.example.board.domain.board.SearchType).TITLE}">제목</option>
+                    <option th:value="${T(com.example.board.domain.board.SearchType).CONTENT}">내용</option>
+                    <option th:value="${T(com.example.board.domain.board.SearchType).ALL}">제목+내용</option>
                 </select>
             </div>
 
