--- a/src/main/resources/templates/joinpage.html
+++ b/src/main/resources/templates/joinpage.html
@@ -32,7 +32,7 @@
                             <input type="password" class="form-control" placeholder="비밀번호" name="pass" required>
                         </div>
                         <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="닉네임" name="nickName" required>
+                            <input type="text" class="form-control" placeholder="닉네임" name="nickname" required>
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <button type="submit" class="btn btn-primary">가입하기</button>
