--- a/src/main/resources/templates/writepost.html
+++ b/src/main/resources/templates/writepost.html
@@ -13,8 +13,7 @@
 
     <form action="viewpost.html" th:action method="post">
         <div>
-            <label>제목</label>
-            <input type="text" id="title" name="title" class="form-control">
+            <input type="text" id="title" name="title" class="form-control" placeholder="제목을 입력하세요.">
         </div>
 
         <hr class="my-3">
