댓글 삭제 기능 구현

--- a/src/main/resources/templates/boardmainpage.html
+++ b/src/main/resources/templates/boardmainpage.html
@@ -151,6 +151,18 @@
         </nav>
     </div>
 
+    <!-- 게시판 목록으로 가기 버튼 -->
+    <div>
+        <div class="">
+            <button class="btn btn-secondary"
+                    onclick="location.href='board.html'"
+                    th:onclick="|location.href='@{/}'|"
+            >
+                게시판 목록
+            </button>
+        </div>
+    </div>
+
 </div>
 
 
